# study-pal

./: .dockerignore  .env.example  .gitignore  CALENDAR_SETUP.md  CHATBOT_USAGE.md  CLAUDE.md  DEMO.md  Dockerfile  GOOGLE_CALENDAR_SETUP.md  IMPLEMENTATION_ROADMAP.md  LANGGRAPH_GUIDE.md  LICENSE  LOGIN_FEATURE.md  Makefile  PROMPT_STRUCTURE.md  PROMPT_USAGE.md  README.md  README_FRONTEND.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_VISUAL_GUIDE.md  agents.md  debug_vector_store.py  docker-compose.yml  example_web_motivator.py  example_workflow_execution.py  gradio_app.py  gradio_app_demo.py  main.py  pyproject.toml  requirements.txt  run_terminal_test.sh  setup_env.sh  start_dev.sh  start_ui.sh  terminal_app.py  test_context_retrieval.py  test_fixes.py  test_full_workflow_auto.py  test_gradio.py  test_hybrid_weakness.py  (+7 more)
agents/: __init__.py  motivator_agent.py  onboarding.py  quote_scraper.py  quote_store 2.py  quote_store.py  scheduler_agent.py  tutor_agent.py  tutor_chatbot.py  user_profile.py  weakness_detector_agent.py
api/: __init__.py  dependencies.py  main.py  models.py  requirements.txt  run.sh
calendar-mcp/: .env.example  Dockerfile  SETUP.md
configs/: settings.yaml
core/: __init__.py  agent_avatars.py  document_processor.py  google_calendar.py  graph_manager.py  langgraph_chatbot.py  llm_weakness_detector.py  mcp_connectors.py  rag_pipeline.py  utils.py  vector_stores.py  weakness_analyzer.py  workflow_graph.py  workflow_nodes.py  workflow_state.py
data/: quotes_seed.json  quotes_store.json
docs/: README.md  architecture.md  deployment.md  quick-start.md
(+54 files in other folders)
